# fools22

./: .gitignore  CMakeLists.txt  README.md
cc3/: script.txt
docs/: api.md  certs.md  gfgb.kra  joybus  map.kra  net.md  password.md  regions.md
tools/: CMakeLists.txt  aesopensslenc.cpp  certmagic.m  cmdsum.cpp  discript.cpp  foolspkt.py  loadbytes.m  mdiff.cpp  passmaker.cpp  solvepass.py  writebytes.m
writeup/: writeup.md
